--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,14 @@ repositories {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: '*.jar')
+
     implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
 
     implementation 'fr.flowarg:flowupdater:1.3.+'
     implementation 'fr.flowarg:openlauncherlib:3.+'
 
-    implementation group: 'com.github.goxr3plus', name: 'FX-BorderlessScene', version: '4.4.0'
+    implementation 'com.github.goxr3plus:FX-BorderlessScene:4.+'
 }
 
 javafx {
