Microsoft authentication and settings page

--- a/build.gradle
+++ b/build.gradle
@@ -16,22 +16,25 @@ repositories {
         url = 'https://jitpack.io/'
         name = 'JitPack'
     }
+    maven {
+        url 'https://litarvan.github.io/maven'
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: '*.jar')
-
+    implementation 'fr.litarvan:openauth:1.1.1'
     implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
 
     implementation 'fr.flowarg:flowupdater:1.3.+'
     implementation 'fr.flowarg:openlauncherlib:3.+'
 
     implementation 'com.github.goxr3plus:FX-BorderlessScene:4.+'
+    implementation 'com.github.oshi:oshi-core:5.3.4'
 }
 
 javafx {
     version = 12
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing']
 }
 
 application {
