--- a/build.gradle
+++ b/build.gradle
@@ -22,14 +22,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'fr.litarvan:openauth:1.1.1'
-    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
+    implementation 'fr.litarvan:openauth:1+'
+    implementation 'de.jensd:fontawesomefx-fontawesome:4+'
 
-    implementation 'fr.flowarg:flowupdater:1.3.+'
-    implementation 'fr.flowarg:openlauncherlib:3.+'
+    implementation 'fr.flowarg:flowupdater:1+'
+    implementation 'fr.flowarg:openlauncherlib:3+'
 
-    implementation 'com.github.goxr3plus:FX-BorderlessScene:4.+'
-    implementation 'com.github.oshi:oshi-core:5.3.4'
+    implementation 'com.github.goxr3plus:FX-BorderlessScene:4+'
+    implementation 'com.github.oshi:oshi-core:5+'
 }
 
 javafx {
