--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'idea'
-    id 'java-library'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.9'
 }
@@ -43,14 +44,4 @@ application {
 
 compileJava {
     options.encoding = "UTF-8"
-}
-
-jar {
-    manifest.attributes.put('Main-Class', 'com.github.bricklou.launchertuto.Main')
-
-    from {
-        configurations.compileClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
 }
