--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'idea'
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
-    id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'java-library'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 apply plugin: 'org.openjfx.javafxplugin'
@@ -34,7 +34,6 @@ dependencies {
 }
 
 javafx {
-    version = 12
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing']
 }
 
