--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'idea'
-    id 'java'
+    id 'java-library'
     id 'application'
+	id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group 'com.github.bricklou'
@@ -18,7 +19,7 @@ repositories {
 dependencies {
     implementation 'de.jensd:fontawesomefx:8.9'
 
-    implementation 'fr.flowarg:flowupdater:1.3.+'
+    implementation 'fr.flowarg:flowupdater:1.8.+'
     implementation 'fr.flowarg:openlauncherlib:3.+'
 
     implementation group: 'com.github.goxr3plus', name: 'FX-BorderlessScene', version: '4.4.0'
@@ -34,10 +35,4 @@ compileJava {
 
 jar {
     manifest.attributes.put('Main-Class', 'com.github.bricklou.launchertuto.Main')
-
-    from {
-        configurations.compileClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
 }
